vlib/v/checker/tests/inout/for-in-index-type.out
vlib/v/checker/tests/inout/for-in-index-type.v:2:11: error: for in: cannot index `int`
    1| fn main() {
    2|     for a in 52 {
                    ~~
    3|         println(a)
    4|     }